tdf#113591 Fix crash when switching between Calc and other LO window

Need to get the ContentNode from EditDoc, as the selection might
have a pointer to an already deleted ContentNode.

Change-Id: I5c17be8ec2cbc57686eaf90e8b03c026aea7f28f